--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,4 @@ board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
 upload_port = COM3
+lib_deps = roboticsbrno/ServoESP32@^1.0.3
